--- a/style.css
+++ b/style.css
@@ -1,5 +1,34 @@
 body{
-    padding: 100px;
+    padding: 80px;
+}
+.text-center{
+    font-size: 20px;
+}
+.submit-area{
+    margin-top: 50px;
+    padding: 45px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px grey;
+
+}
+#transaction-area{
+    display: none;
+}
+.status{
+    margin: 0 20px;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+
+}
+.deposit{
+    background-color: slateblue;
+}
+.withdraw{
+    background-color: lightsalmon;
+}
+.balance{
+    background-color: orange;
 }
 
 
